<!--
  ~ Copyright (c) 2020.
  ~ Designed and developed by @quabynah_codelabs (Dennis Bilson)
  ~
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Swan</string>
    <string name="app_name__full">Swan - World of Luxury</string>
    <string name="app_desc">Let\'s Create\nYour Own Style</string>
    <string name="app_desc__long">Each woman has a unique style. We help you to create your very own style because you deserve to shine like a star</string>
    <string name="get_started">Get started</string>
    <string name="continue_shopping">Continue shopping</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_welcome">Welcome</string>
    <string name="title_home">Home</string>
    <string name="title_auth">Authentication</string>
    <string name="title_product">Product Details</string>
    <string name="title_cart">Cart</string>
    <string name="title_help">About &amp; Support</string>
    <string name="title_search">Search</string>
    <string name="header_image">header_image</string>
    <string name="app_desc__other">Discover the world\'s top products right at the comfort of your home</string>
    <string name="app_creator">Created with ❤️ by <b>Quabynah Codelabs</b>©</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_twitter">Sign in with Twitter</string>
    <string name="sign_in_as_guest">Sign in later</string>
    <string name="or_with_email">Or</string>
    <string name="filter">Filter</string>
    <string name="search_hint">Search here</string>
    <string name="cd_scan_image">Scan image</string>
    <string name="bag_now">Bag Now</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="select_size">Select size</string>
    <string name="select_color">Select Color</string>
    <string name="x">x</string>
    <string name="m">m</string>
    <string name="l">l</string>
    <string name="xl">xl</string>
    <string name="cd_toggle_theme">Toggle theme</string>
    <string name="categories">Categories</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_user">My Profile</string>
    <string name="coupon_desc">Use the code above for our <b>Spring Collection Purchase</b></string>
    <string name="coupon_code">luxury @galore</string>
    <string name="coupon_percentage"><b>23%</b> off</string>
    <string name="coupon_header">A Spring Surprise</string>
    <string name="title_activity_lauch">LauchActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="explore">explore</string>
    <string name="loading">Loading…</string>
    <string name="first_launch">Preparing for first launch…</string>
    <string name="login_prompt">Login to view your profile</string>
    <string name="header_image_url" translatable="false"><![CDATA[https://images.unsplash.com/photo-1517677129300-07b130802f46?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60]]></string>
    <string name="buy_now">Buy now</string>
    <string name="update">Update</string>
    <string name="checkout">checkout</string>
    <string name="payment_unsupported">payment unsupported</string>
</resources>