<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020.
  ~ Designed and developed by @quabynah_codelabs (Dennis Bilson)
  ~
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wol_nav_graph"
    app:startDestination="@id/nav_welcome">

    <fragment
        android:id="@id/nav_welcome"
        android:name="io.worldofluxury.view.welcome.WelcomeFragment"
        android:label="@string/title_welcome"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_nav_welcome_to_nav_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/nav_welcome"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_nav_welcome_to_nav_auth"
            app:destination="@id/nav_auth"
            app:popUpTo="@id/nav_welcome"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@id/nav_home"
        android:name="io.worldofluxury.view.product.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home_fragment" >
        <action
            android:id="@+id/action_nav_home_to_nav_product"
            app:destination="@id/nav_product" />
    </fragment>
    <fragment
        android:id="@id/nav_auth"
        android:name="io.worldofluxury.view.auth.AuthFragment"
        android:label="@string/title_auth"
        tools:layout="@layout/auth_fragment">
        <action
            android:id="@+id/action_nav_auth_to_nav_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/nav_auth"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@id/nav_product"
        android:name="io.worldofluxury.view.product.ProductFragment"
        android:label="@string/title_product"
        tools:layout="@layout/fragment_product" >
        <argument
            android:name="product"
            app:argType="io.worldofluxury.data.Product" />
    </fragment>
</navigation>