<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020.
  ~ Designed and developed by @quabynah_codelabs (Dennis Bilson)
  ~
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="io.worldofluxury.viewmodel.AuthViewModel" />

        <import type="io.worldofluxury.preferences.UserSharedPreferences" />

        <variable
            name="image"
            type="Integer" />

        <variable
            name="prefs"
            type="UserSharedPreferences" />

        <variable
            name="vm"
            type="AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/Theme.WorldOfLuxury.Welcome"
        tools:context=".view.welcome.WelcomeFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/header_text__three"
            android:layout_width="@dimen/spacing_none"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/spacing_large"
            android:text="@string/app_creator"
            android:textAlignment="center"
            android:textAppearance="?textAppearanceOverline"
            app:layout_constraintBottom_toTopOf="@id/bottom_horiz_guide"
            app:layout_constraintEnd_toStartOf="@id/right_vert_guide"
            app:layout_constraintStart_toEndOf="@id/left_vert_guide" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/spacing_none"
            android:layout_height="@dimen/spacing_none"
            android:layout_marginVertical="@dimen/spacing_x36"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toTopOf="@id/header_text__three"
            app:layout_constraintEnd_toStartOf="@id/right_vert_guide"
            app:layout_constraintStart_toEndOf="@id/left_vert_guide"
            app:layout_constraintTop_toBottomOf="@id/get_started"
            app:randomImage="@{image}"
            tools:src="@drawable/world_of_luxury_one" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/app_desc__one"
            android:layout_width="@dimen/spacing_none"
            android:layout_height="wrap_content"
            android:text="@string/app_desc"
            android:textAlignment="viewStart"
            android:textAppearance="?textAppearanceHeadline4"
            app:layout_constraintEnd_toStartOf="@id/right_vert_guide"
            app:layout_constraintStart_toEndOf="@id/left_vert_guide"
            app:layout_constraintTop_toBottomOf="@id/top_horiz_guide" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/app_desc__two"
            android:layout_width="@dimen/spacing_none"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:paddingHorizontal="@dimen/spacing_small"
            android:text="@string/app_desc__long"
            android:textAlignment="viewStart"
            android:textAppearance="?textAppearanceBody1"
            app:layout_constraintEnd_toStartOf="@id/right_vert_guide"
            app:layout_constraintStart_toEndOf="@id/left_vert_guide"
            app:layout_constraintTop_toBottomOf="@id/app_desc__one" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/get_started"
            android:layout_width="@dimen/spacing_none"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_x36"
            android:onClick="@{(v) -> vm.navLoginOrHome(v)}"
            android:text="@{prefs.isLoggedIn() ? @string/continue_shopping : @string/get_started, default=`@string/get_started`}"
            app:icon="@drawable/ic_twotone_right"
            app:layout_constraintStart_toEndOf="@id/left_vert_guide"
            app:layout_constraintTop_toBottomOf="@id/app_desc__two" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_vert_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/spacing_x48" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_vert_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/spacing_x48" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_horiz_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/spacing_x128" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_horiz_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/spacing_xlarge" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>