<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020.
  ~ Designed and developed by @quabynah_codelabs (Dennis Bilson)
  ~
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="io.worldofluxury.view.OnBoardingItem" />

        <import type="io.worldofluxury.viewmodel.LauncherViewModel" />

        <import type="android.app.Activity" />

        <variable
            name="item"
            type="OnBoardingItem" />

        <variable
            name="host"
            type="Activity" />

        <variable
            name="vm"
            type="LauncherViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/onboarding_image"
            android:layout_width="@dimen/spacing_none"
            android:layout_height="@dimen/spacing_none"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:url="@{item.imageUrl}"
            tools:src="@drawable/world_of_luxury_three" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_none"
            android:background="@drawable/curved_background"
            android:paddingHorizontal="@dimen/spacing_x24"
            android:paddingVertical="@dimen/spacing_x24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_horiz_guideline">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/onboarding_title"
                android:layout_width="@dimen/spacing_none"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:text="@{item.title}"
                android:textAppearance="?textAppearanceHeadline4"
                app:layout_constraintEnd_toStartOf="@id/right_vert_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/app_name__full" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/onboarding_desc"
                android:layout_width="@dimen/spacing_none"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:gravity="start|center_vertical"
                android:text="@{item.description}"
                android:textAppearance="?textAppearanceBody2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/onboarding_title"
                tools:text="@string/app_desc__long" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_vert_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.65" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_horiz_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>